--- a/PimWeb/appsettings.json
+++ b/PimWeb/appsettings.json
@@ -9,5 +9,15 @@
   "AppOptions": {
     "FulltextConfig": "public.mysearch",
     "WebAppPath": "Pim"
+  },
+  "SeedUsers": {
+    "users": [
+      {
+        "name": "admin",
+        "email": "admin@pim.com",
+        "password": "password",
+        "roles": ["Admin"]
+      }
+    ]
   }
 }
