--- a/Pim.CommonLib/Pim.CommonLib.csproj
+++ b/Pim.CommonLib/Pim.CommonLib.csproj
@@ -10,6 +10,7 @@
     <LangVersion>latestmajor</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.0" />
     <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="PDFsharp" Version="6.0.0" />
