--- a/PimWeb/appsettings.Development.json
+++ b/PimWeb/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=pim;User Id=pimweb;Password=9jhgMa3JJ"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=pimdev;User Id=pimweb;Password=9jhgMa3JJ"
   },
   "DetailedErrors": true,
   "Logging": {
