--- a/PimWeb/appsettings.json
+++ b/PimWeb/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "AppOptions": {
     "FulltextConfig": "public.mysearch",
-    "WebAppPath": "Pim"
+    "WebAppPath": "Pim",
+    "FileStoragePath": "f:/data/pim"
   },
   "SeedUsers": {
     "users": [
